--- a/templates/home.html
+++ b/templates/home.html
@@ -5,7 +5,8 @@
 
 {% block body %}
 <center>
-<h1>Хуечан</h1>
-<p>blah blah blah...</p>
+<h1>форч 212 </h1>
+<p>херня где вы можете писать все что угодно</p>
+<p>Но помните вы несете ответственность за посты которые вы делаете</p>
 </center>
 {% endblock %}
