--- a/templates/home.html
+++ b/templates/home.html
@@ -1,6 +1,6 @@
 {% extends "layout.html" %}
 <!doctype html>
-<title>Flaskchan</title>
+<title>212chan</title>
 <link rel=stylesheet type=text/css href="{{ url_for('static', filename='style.css') }}">
 
 {% block body %}
@@ -8,5 +8,6 @@
 <h1>форч 212 </h1>
 <p>херня где вы можете писать все что угодно</p>
 <p>Но помните вы несете ответственность за посты которые вы делаете</p>
+<img class="img_home" src="static/images/sosa.jpg" alt="Ops">
 </center>
 {% endblock %}
