--- a/templates/layout.html
+++ b/templates/layout.html
@@ -4,12 +4,13 @@
 
 {% block header %}
 <center>
-<div id='header'> [
+<div class="header"> [
 	<a href='/'>home</a>
-	<a href='/all'>all</a> ][ 
-	<a href='/learn'>learn</a>
-	<a href='/create'>create</a>
-	<a href='/media'>media</a> ]
+	<a href='/all'>Все</a> ][ 
+	<a href='/learn'>Учеба</a>
+	<a href='/create'>Учителя</a>
+	<a href='/media'>Фоточки</a> 
+	<a href="/nsfw">NSFW</a> ]
 </div>
 {% endblock %}
 
