--- a/templates/show_thread.html
+++ b/templates/show_thread.html
@@ -13,11 +13,11 @@
 	<div class='byline'>
 		<span>{{ entry.subject }}</span>
 		<span>
-			{% if entry.email %}
+			<!-- {% if entry.email %}
 			<a href="mailto:{{ entry.email }}">{{ entry.name }}</a>
-			{% else %}
+			{% else %} -->
 			{{ entry.name }}
-			{% endif %}
+			<!-- {% endif %} -->
 		</span>
 		<span>{{ entry.date }}</span>
 		<a href='#{{ entry.id }}' onclick="cite({{ entry.id }})">#{{ entry.id }}</a>
