--- a/templates/home.html
+++ b/templates/home.html
@@ -5,8 +5,8 @@
 
 {% block body %}
 <center>
-<h1>форч 212 </h1>
-<p>херня где вы можете писать все что угодно</p>
+<h1>212chan</h1>
+<!-- <p>херня где вы можете писать все что угодно</p> -->
 <p>Но помните вы несете ответственность за посты которые вы делаете</p>
 <img class="img_home" src="static/images/sosa.jpg" alt="Ops">
 </center>
