--- a/templates/show_all.html
+++ b/templates/show_all.html
@@ -15,13 +15,7 @@
 		<a href=/{{ entry.board }}>/{{ entry.board }}/</a>
 		{% endif %}
 		<span>{{ entry.subject }}</span>
-		<span>
-			{% if entry.email %}
-			<a href="mailto:{{ entry.email }}">{{ entry.name }}</a>
-			{% else %}
-			{{ entry.name }}
-			{% endif %}
-		</span>
+		<span>{{ entry.name }}</span>
 		<span>{{ entry.date }}</span>
 		{% if not entry.op_id %}
 		<span><a href='/{{ entry.board }}/{{ entry.id }}'>#{{ entry.id }}</a></span>
@@ -43,10 +37,10 @@
 
 <span id=right>
 	<p><b>Overboard</b></p>
-	<b>Ruuruus:</b>
+	<b>важные новости:</b>
 	<ul>
-		<li>foo</li>
-		<li>bar</li>
+		<li>10Б Лохи</li>
+		<li>10Б класс мусаров</li>
 	</ul>
 </span>
 
