--- a/templates/home.html
+++ b/templates/home.html
@@ -9,5 +9,6 @@
 <!-- <p>херня где вы можете писать все что угодно</p> -->
 <p>Но помните вы несете ответственность за посты которые вы делаете</p>
 <img class="img_home" src="static/images/sosa.jpg" alt="Ops">
+<img class="img_home2" src="static/images/Kaif.png" alt="Ops">
 </center>
 {% endblock %}
