--- a/templates/show_all.html
+++ b/templates/show_all.html
@@ -35,12 +35,15 @@
 {% endfor %}
 </div>
 
-<span id=right>
+<span class="Overboard_span">
 	<p><b>Overboard</b></p>
 	<b>важные новости:</b>
 	<ul>
-		<li>10Б Лохи</li>
-		<li>10Б класс мусаров</li>
+	
+		<li> <a href="https://don-samogon.ru/blog/samogonovarenie/prostoy-retsept-domashney-vodki/">Как сделать водку?</a></li>
+		<li>Водка настолько вкусная</li>
+		<li>Водка впечатляет</li>
+		
 	</ul>
 </span>
 
