--- a/templates/show_board.html
+++ b/templates/show_board.html
@@ -1,37 +1,36 @@
 {% extends "layout.html" %}
 {% block body %}
-<div id=wrap>
+<div id="wrap">
+    <div id="left">
+        {% for entry in entries %}
+            {% if entry.op_id %}
+                <div class="post">
+            {% else %}
+                <hr>
+                <div class="thread">
+            {% endif %}
+                    <div class="byline">
+                        <span>{{ entry.subject }}</span>
+                        <span>{{ entry.name }}</span>
+                        <!-- <span>{{ entry.date.strftime("%Y-%m-%d %H:%M:%S") }}</span> -->
+                        {% if not entry.op_id %}
+                            <span><a href='{{ entry.id }}'>#{{ entry.id }}</a></span>
+                        {% else %}
+                            <a href='#{{ entry.id }}' onclick="cite({{ entry.id }})">#{{ entry.id }}</a>
+                        {% endif %}
+                    </div>
+                    <div class="post_body" id="{{ entry.id }}">
+                        {% if entry.fname and not entry.deleted_image %}
+                            <a href="/static/images/{{ entry.fname }}">
+                                <img class="thumb" src="/static/thumbs/{{ entry.fname }}">
+                            </a>
+                        {% endif %}
+                        {{ entry.text|markdown }}
+                    </div>
+                </div>
+        {% endfor %}
+    </div>
 
-<div id=left>
-{% for entry in entries %}
-{% if entry.op_id %}
-<div class=post>
-{% else %}
-<hr>
-<div class=thread>
-{% endif %}
-	<div class='byline'>
-		<span>{{ entry.subject }}</span>
-		<span>{{ entry.name }}</span>
-		<span>{{ entry.date }}</span>
-		{% if not entry.op_id %}
-			<span><a href='{{ entry.id }}'>#{{ entry.id }}</a></span>
-		{% else %}
-			<a href='#{{ entry.id }}' onclick="cite({{ entry.id }})">#{{ entry.id }}</a>
-		{% endif %}
-	</div>
-	<div class='post_body' id='{{ entry.id }}'>
-		{% if entry.fname %}
-		<a href=/static/images/{{ entry.fname }}>
-		<img class=thumb src=/static/thumbs/{{ entry.fname }}>
-		</a>
-		{% endif %}
-		{{ entry.text|markdown }}
-	</div>
-</div>
-{% endfor %}
-</div>
-
-{% include 'sidebar.html' %}
+    {% include 'sidebar.html' %}
 </div>
 {% endblock %}
