--- a/templates/show_thread.html
+++ b/templates/show_thread.html
@@ -12,7 +12,7 @@
                     <div class="byline">
                         <span>{{ entry.subject }}</span>
                         <span>{{ entry.name }}</span>
-                        <!-- <span>{{ entry.date.strftime("%Y-%m-%d %H:%M:%S") }}</span> -->
+                        <span>{{ entry.date("%Y-%m-%d %H:%M:%S") }}</span>
                         <a href="#{{ entry.id }}" onclick="cite({{ entry.id }})">#{{ entry.id }}</a>
                         <a href="{{ url_for('delete') }}?id={{ entry.id }}&board={{ board }}&thread={{ entry.op_id }}">delete</a>
                     </div>
