--- a/templates/base.html
+++ b/templates/base.html
@@ -7,14 +7,14 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
 </head>
 <body>
-    <header>
+    <header class="header_admin">
         <h1>Панель Администратора</h1>
         <nav>
             <a href="{{ url_for('admin_boards') }}">Доски</a>
             <a href="{{ url_for('admin_posts') }}">Посты</a>
         </nav>
     </header>
-    <main>
+    <main class="main_admin">
         {% block content %}{% endblock %}
     </main>
 </body>
