--- a/templates/show_thread.html
+++ b/templates/show_thread.html
@@ -14,8 +14,9 @@
 		<span>{{ entry.subject }}</span>
 		<span>{{ entry.name }}</span>
 		<span>{{ entry.date }}</span>
-		<a href='#{{ entry.id }}' onclick="cite({{ entry.id }})">#{{ entry.id }}</a>
-		<a href="{{ url_for('delete') }}?id={{entry.id}}&board={{board}}&thread={{entry.op_id}}">delete</a>
+		<p>#{{ entry.id }}</p>
+		<!-- <a href='#{{ entry.id }}' onclick="cite({{ entry.id }})">#{{ entry.id }}</a> -->
+		<!-- <a href="{{ url_for('delete') }}?id={{entry.id}}&board={{board}}&thread={{entry.op_id}}">delete</a> -->
 	</div>
 	<div class='post_body' id='{{ entry.id }}'>
 		{% if entry.fname %}
