--- a/templates/sidebar.html
+++ b/templates/sidebar.html
@@ -6,7 +6,7 @@
 		<input type="hidden" name="board" value="{{ board }}">
 		<input type="hidden" name="op_id" value="{{ id }}">
 		<input class="name_input" type=text name=name placeholder=Name>
-		<!-- <input class="subject_input" type=text name=subject placeholder=Subject> -->
+		<input class="subject_input" type=text name=subject placeholder=Subject>
 		<textarea id=comment name=post_content rows=8></textarea>
 		<input class="file_input" type=file name=file>
 		<input class="button_input" type=submit value=Reply>
