--- a/templates/layout.html
+++ b/templates/layout.html
@@ -1,6 +1,8 @@
 <!doctype html>
 <title>/{{ board }}/</title>
 <link rel=stylesheet type=text/css href="{{ url_for('static', filename='style.css') }}">
+<link rel="stylesheet" href="globals.css" />
+<link rel="stylesheet" href="style.css" />
 
 {% block header %}
 <center>
