--- a/templates/home.html
+++ b/templates/home.html
@@ -5,10 +5,12 @@
 
 {% block body %}
 <center>
-<h1>212chan</h1>
-<!-- <p>херня где вы можете писать все что угодно</p> -->
-<p>Но помните вы несете ответственность за посты которые вы делаете</p>
-<img class="img_home" src="static/images/sosa.jpg" alt="Ops">
-<img class="img_home2" src="static/images/Kaif.png" alt="Ops">
+    <h1>212chan</h1>
+    <!-- <p>херня где вы можете писать все что угодно</p> -->
+    <p>Но помните вы несете ответственность за посты которые вы делаете</p>
+    <img class="img_home" src="static/images/sosa.jpg" alt="Ops">
+    <img class="img_home2" src="static/images/Kaif.png" alt="Ops">
+    
 </center>
+<!-- <a href="/admin/login">Ты админ?</a> -->
 {% endblock %}
