login_fot_admin_готово

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -10,7 +10,7 @@
 	<a href='/'>home</a>
 	<a href='/all'>Все</a> ][ 
 	<a href='/learn'>Учеба</a>
-	<a href='/create'>Учителя</a>
+	<a href='/teacher'>Учителя</a>
 	<a href='/media'>Фоточки</a> 
 	<a href="/nsfw">NSFW</a> ]
 </div>
