--- a/templates/home.html
+++ b/templates/home.html
@@ -10,7 +10,7 @@
     <p>Но помните вы несете ответственность за посты которые вы делаете</p>
     <img class="img_home" src="static/images/sosa.jpg" alt="Ops">
     <img class="img_home2" src="static/images/Kaif.png" alt="Ops">
-    
+    <a class="admin-login" href="/login">Ты админ?</a>
 </center>
-<!-- <a href="/admin/login">Ты админ?</a> -->
+
 {% endblock %}
