--- a/templates/home.html
+++ b/templates/home.html
@@ -1,11 +1,16 @@
 {% extends "layout.html" %}
 <!doctype html>
-<title>Flaskchan</title>
+<title>212chan</title>
 <link rel=stylesheet type=text/css href="{{ url_for('static', filename='style.css') }}">
 
 {% block body %}
 <center>
-<h1>Хуечан</h1>
-<p>blah blah blah...</p>
+    <h1>212chan</h1>
+    <!-- <p>херня где вы можете писать все что угодно</p> -->
+    <p>Но помните вы несете ответственность за посты которые вы делаете</p>
+    <img class="img_home" src="static/images/sosa.jpg" alt="Ops">
+    <img class="img_home2" src="static/images/Kaif.png" alt="Ops">
+    <a class="admin-login" href="/login">Ты админ?</a>
 </center>
+
 {% endblock %}
