--- a/templates/home.html
+++ b/templates/home.html
@@ -9,9 +9,20 @@
     <h1>212chan</h1>
     <!-- <p>херня где вы можете писать все что угодно</p> -->
     <p>Но помните вы несете ответственность за посты которые вы делаете</p>
-    <img class="img_home" src="static/images/sosa.jpg" alt="Ops">
-    <img class="img_home2" src="static/images/Kaif.png" alt="Ops">
-    <a class="admin-login" href="/login">Ты админ?</a>
+    <img class="img_home" src="static/images/sosa.png" alt="Ops">
+    <a class="admin-link" href="/login" id="admin-link">Ты админ?</a>
 </center>
 
+<script>
+    document.getElementById('admin-link').addEventListener('click', function(event) {
+        event.preventDefault(); // Предотвращаем стандартное поведение ссылки
+        var sosal = prompt("Cосал?");
+    
+        if (sosal == "да") {
+            window.location.href = "/login"; // Перенаправляем 
+        } else {
+            alert("иди гуляй");
+        }
+    });
+    </script>
 {% endblock %}
