--- a/templates/admin_boards.html
+++ b/templates/admin_boards.html
@@ -3,6 +3,9 @@
 {% block content %}
     <h2>Управление досками</h2>
     <a href="{{ url_for('admin_create_board') }}">Создать новую доску</a>
+    {% if current_user.is_authenticated %}
+        <a href="{{ url_for('logout') }}">Выйти</a>
+    {% endif %}
     <ul>
         {% for board in boards %}
             <li>
@@ -14,5 +17,8 @@
                 </form>
             </li>
         {% endfor %}
+
     </ul>
+
+
 {% endblock %}
