--- a/templates/login.html
+++ b/templates/login.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}?v={{ version }}">
+    <script src="{{ url_for('static', filename='script.js') }}?v={{ version }}"></script>
     <title>Login</title>
 </head>
 <body>
