--- a/templates/home.html
+++ b/templates/home.html
@@ -10,13 +10,13 @@
     <!-- <p>херня где вы можете писать все что угодно</p> -->
     <p>Но помните вы несете ответственность за посты которые вы делаете</p>
     <img class="img_home" src="static/images/sosa.png" alt="Ops">
-    <a class="admin-link" href="/login" id="admin-link">Ты админ?</a>
+    <!-- <a class="admin-link" href="/login" id="admin-link">Ты админ?</a> -->
 </center>
 
-<script>
+<!-- <script>
     document.getElementById('admin-link').addEventListener('click', function(event) {
         event.preventDefault(); // Предотвращаем стандартное поведение ссылки
-        var prompt_admin = prompt("'пиво или 'водка'?");
+        var prompt_admin = prompt("?");
     
         if (prompt_admin == "пиво") {
             window.location.href = "/login"; // Перенаправляем 
@@ -24,5 +24,5 @@
             alert("иди гуляй");
         }
     });
-    </script>
+    </script> -->
 {% endblock %}
