--- a/templates/base.html
+++ b/templates/base.html
@@ -17,5 +17,7 @@
     <main class="main_admin">
         {% block content %}{% endblock %}
     </main>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.0.1/socket.io.js"></script>
+    <script src="{{ url_for('static', filename='js/socket.js') }}"></script>
 </body>
 </html>
